--- a/client/main.css
+++ b/client/main.css
@@ -1,1 +1,31 @@
-/* CSS declarations go here */
+* { padding: 0; margin: 0; }
+html, body, #main {
+    width: 100%;
+    min-height: 100%;
+    height: 100%;
+    max-height: 100%;
+}
+
+#main {
+  min-height: 90%;
+  max-height: 90%;
+  height: 90%;
+  width: 99%;
+  /*float: left;*/
+  border: 1px;
+  border-style: solid;
+}
+
+#map_container {
+  min-height: 100%;
+  max-height: 100%;
+  height: 100vh;
+}
+
+svg {
+  min-height: 100%;
+  max-height: 100%;
+  height: 100vh;
+  border: 1px;
+  border-style: solid;
+}
