--- a/client/main.css
+++ b/client/main.css
@@ -1,5 +1,5 @@
 * { padding: 0; margin: 0; }
-html, body, #main {
+html, body {
     width: 100%;
     min-height: 100%;
     height: 100%;
@@ -10,10 +10,31 @@ html, body, #main {
   min-height: 90%;
   max-height: 90%;
   height: 90%;
-  width: 99%;
-  /*float: left;*/
+  width: 75%;
+  float: right;
   border: 1px;
   border-style: solid;
+  overflow:hidden;
+}
+
+#details {
+  min-height: 90%;
+  max-height: 90%;
+  height: 90%;
+  float:left;
+  width:25%;
+  overflow:hidden;
+}
+
+#left{
+float:left;
+width:75%;
+overflow:hidden;
+}
+#right{
+float:left;
+width:25%;
+overflow:hidden;
 }
 
 #map_container {
